--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>Maestro</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    </head>
-    <body>
-        <h1>Corporate Homepage</h1>
-    </body>
+	<head>
+		<title>Maestro</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width,initial-scale=1.0">
+		<link rel="stylesheet" href="assets/css/normalize.css">
+		<link rel="stylesheet" href="assets/css/style.css">
+	</head>
+	<body>
+		<img src="assets/img/maestro-m-icon.svg" width="46" aria-hidden="true">
+	</body>
 </html>
