--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,6 +8,23 @@
 		<link rel="stylesheet" href="assets/css/style.css">
 	</head>
 	<body>
-		<img src="assets/img/maestro-m-icon.svg" width="46" aria-hidden="true">
+		<div class="homepage-abovefold">
+			<header class="site-header">
+				<img class="site-brand" src="assets/img/maestro-m-icon.svg" width="40" aria-label="Maestro">
+			</header>
+			<!-- Hero Background Photo by Valentino Funghi on Unsplash -->
+			<section class="homepage-hero invert">
+				<div class="homepage-hero-text">
+					<h1 class="homepage-hero-text-primary">Hero text goes here</h1>
+					<h2 class="homepage-hero-text-secondary">Hero text goes here</h2>
+				</div>
+				<div class="homepage-hero-bottom">
+					<a href="mock-lesson-title.html" class="button block-button big-button">Button</a>
+				</div>
+			</section>
+		</div><!-- .homepage -->
+		<main class="site-main">
+			<!-- <section class="homepage-belowfold">Under the fold</section> -->
+		</main>
 	</body>
 </html>
