Mock lesson title page

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="assets/css/style.css">
 	</head>
 	<body>
-		<div class="homepage-abovefold">
+		<div class="abovefold">
 			<header class="site-header">
 				<img class="site-brand" src="assets/img/maestro-m-icon.svg" width="40" aria-label="Maestro">
 			</header>
@@ -22,9 +22,6 @@
 					<a href="mock-lesson-title.html" class="button block-button big-button">Button</a>
 				</div>
 			</section>
-		</div><!-- .homepage -->
-		<main class="site-main">
-			<!-- <section class="homepage-belowfold">Under the fold</section> -->
-		</main>
+		</div><!-- .abovefold -->
 	</body>
 </html>
