--- a/src/public/mock-lesson-title.html
+++ b/src/public/mock-lesson-title.html
@@ -8,11 +8,24 @@
 		<link rel="stylesheet" href="assets/css/style.css">
 	</head>
 	<body>
-		<header class="site-header">
-			<img class="site-brand" src="assets/img/maestro-m-icon.svg" width="40" aria-label="Maestro">
-		</header>
-		<main class="site-main">
-			asdf
-		</main>
+		<div class="abovefold">
+			<header class="site-header">
+				<img class="site-brand" src="assets/img/maestro-m-icon.svg" width="40" aria-label="Maestro">
+			</header>
+			<section class="lesson">
+				<div class="lesson-title-card">
+					<div class="lesson-title-card-content">
+						<h2 class="lesson-title-detail">Introduction · Lesson 1</h2>
+						<h1 class="lesson-title-text">Quarter, Half, and Whole Notes</h1>
+						<div class="lesson-title-icon">
+							<img src="assets/img/quarter-note.png" width="128">
+						</div>
+					</div><!-- .lesson-title-card-content -->
+					<div class="lesson-title-card-bar">
+						<a href="#" class="button link-button big-button">Start</a>
+					</div><!-- .lesson-title-card-bar -->
+				</div>
+			</section>
+		</div><!-- .abovefold -->
 	</body>
 </html>
