Button homepage fix

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -19,7 +19,7 @@
 					<h2 class="homepage-hero-text-secondary">Hero text goes here</h2>
 				</div>
 				<div class="homepage-hero-bottom">
-					<a href="mock-lesson-title.html" class="button block-button big-button">Button</a>
+					<a href="mock-lesson-title.html" class="button default-button block-button big-button">Button</a>
 				</div>
 			</section>
 		</div><!-- .abovefold -->
