added quiz and completion html skeleton

--- a/src/public/app/completion.html
+++ b/src/public/app/completion.html
@@ -9,7 +9,9 @@
     </head>
     <body>
         <div id="app">
-            <h1>{{ message }}</h1>
+            <h1>Congrats!</h1>
+            <h2>You've finished the lesson.</h2>
+            <button> Done </button>
         </div><!-- #app -->
         <script src="https://unpkg.com/vue"></script>
         <script src="https://npmcdn.com/parse/dist/parse.js"></script>
