--- a/src/public/app/index.html
+++ b/src/public/app/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <div id="app">
-            <h1>{{ message }}</h1>
         </div><!-- #app -->
         <script src="https://unpkg.com/vue"></script>
         <script src="https://npmcdn.com/parse/dist/parse.js"></script>
-        <script src="./app.js"></script>
+        <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+        <script src="./dist/app.js"></script>
     </body>
 </html>
