--- a/src/public/app/index.html
+++ b/src/public/app/index.html
@@ -1,11 +1,18 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>v1</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<!doctype html>
+<html lang="en">
+    <head>
+        <base href="/app/">
+        <title>Maestro</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+    </head>
+    <body>
+        <div id="app">
+        </div><!-- #app -->
+        <script src="https://unpkg.com/vue"></script>
+        <script src="https://npmcdn.com/parse/dist/parse.js"></script>
+        <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+        <script src="./dist/app.js"></script>
+    </body>
 </html>
