Adds about and team sections

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,25 +4,76 @@
 		<title>Maestro</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
-		<link rel="stylesheet" href="assets/css/normalize.css">
+		<!-- Bootstrap -->
+		<!-- <link rel="stylesheet" href="assets/css/normalize.css"> -->
 		<link rel="stylesheet" href="assets/css/style.css">
+		<link href="css/bootstrap.min.css" rel="stylesheet">
 	</head>
 	<body>
+		<nav class="navbar navbar-toggleable-md navbar-light bg-faded">	
+			<div class="collapse navbar-collapse">
+				<ul class="navbar-nav inline">
+					<li>
+						<a class="navbar-brand" href="#"><img src="assets/img/maestro-m-icon.svg" width="40" aria-label="Maestro"></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Team</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
 		<div class="abovefold">
-			<header class="site-header">
-				<img class="site-brand" src="assets/img/maestro-m-icon.svg" width="40" aria-label="Maestro">
-			</header>
 			<!-- Hero Background Photo by Valentino Funghi on Unsplash -->
 			<section class="homepage-hero invert">
 				<div class="homepage-hero-text">
-					<h1 class="homepage-hero-text-primary">Hero text goes here</h1>
-					<h2 class="homepage-hero-text-secondary">Hero text goes here</h2>
+					<h1 class="homepage-hero-text-primary">Maestro</h1>
+					<h2 class="homepage-hero-text-secondary">Learn music easier</h2>
 				</div>
 				<div class="homepage-hero-bottom">
-					<a href="mock-lesson-title.html" class="button default-button block-button big-button">Button</a>
+					<a href="app" class="button default-button block-button big-button">Learn Now</a>
 				</div>
 			</section>
 		</div><!-- .abovefold -->
+		<div id="about">
+			<h1>About</h1>
+			<div>
+				<h2>Description</h2>
+				<p>
+					Maestro is a web and mobile experience to help you learn how to read sheet music in just four lessons.
+					Our unified lessons gradually build on and reinforce each other so that you leave each session with a renewed sense of possibilities.
+					We’ll take you through staff, rhythm, meter, and intervals.
+					Meet your Maestro.
+				</p>
+			</div>
+			<div>
+				<h2>How</h2>
+				<p>
+					We use world class technologies to bring Meastro to you.
+				</p>
+				<span>
+					<ul class="inline">
+						<li>
+							<a href="https://www.docker.com"><img src="assets/img/docker_vertical_large.png" width="180"></a>
+						</li>
+						<li>
+							<a href="https://vuejs.org"><img src="assets/img/vue_logo.png" width="180"></a>
+						</li>
+						<li>
+							<a href="https://parseplatform.org"><img src="assets/img/parse_logo.png" width="180"></a>
+						</li>
+					</ul>
+				</span>
+			</div>
+		</div> <!-- about -->
+		<div id="team">
+			<h1>Team</h1>
+			<div>
+
+			</div>
+		</div> <!-- team -->
 	</body>
 </html>
 <!-- end -->
