Adds Paul's profile pictures

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -70,9 +70,20 @@
 		</div> <!-- about -->
 		<div id="team">
 			<h1>Team</h1>
-			<div>
-
-			</div>
+			<div class="profiles">
+				<img class="profile" src="assets/img/profiles/andre-gras.jpg">
+				<img class="profile" src="assets/img/profiles/andrew-ksendzoff.jpg">
+				<img class="profile" src="assets/img/profiles/bob-brennan-pickens.jpg">
+				<img class="profile" src="assets/img/profiles/dan-mattka.jpg">
+				<img class="profile" src="assets/img/profiles/jacquie-elias.jpg">
+				<img class="profile" src="assets/img/profiles/jake-carlson.jpg">
+				<img class="profile" src="assets/img/profiles/jenn-le.jpg">
+				<img class="profile" src="assets/img/profiles/kena-du.jpg">
+				<img class="profile" src="assets/img/profiles/max-brito.jpg">
+				<img class="profile" src="assets/img/profiles/meg-lindsay.jpg">
+				<img class="profile" src="assets/img/profiles/paul-herz.jpg">
+				<img class="profile" src="assets/img/profiles/sean-burrows.jpg">
+			</div><!-- .profiles -->
 		</div> <!-- team -->
 	</body>
 </html>
