--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,29 +8,19 @@
 		<!-- <link rel="stylesheet" href="assets/css/normalize.css"> -->
 		<link rel="stylesheet" href="assets/css/style.css">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
+		<link rel="icon" type="image/png" href="assets/img/icon.png">
 	</head>
 	<body>
-		<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-			<div class="collapse navbar-collapse">
-				<ul class="navbar-nav inline">
-					<li>
-						<a class="navbar-brand" href="#"><img src="assets/img/maestro-m-icon.svg" width="40" aria-label="Maestro"></a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#about">About</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#team">Team</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
 		<div class="abovefold">
+			<header class="site-header">
+				<img class="site-brand" src="assets/img/maestro-m-icon.svg" width="40" aria-label="Maestro">
+			</header>
 			<!-- Hero Background Photo by Valentino Funghi on Unsplash -->
 			<section class="homepage-hero invert">
 				<div class="homepage-hero-text">
 					<h1 class="homepage-hero-text-primary">Maestro</h1>
-					<h2 class="homepage-hero-text-secondary">Learn music easier</h2>
+					<h2 class="homepage-hero-text-secondary">Your music teacher, anywhere</h2>
 				</div>
 				<div class="homepage-hero-bottom">
 					<a href="app" class="button default-button block-button big-button">Learn Now</a>
@@ -39,57 +29,76 @@
 		</div><!-- .abovefold -->
 		<div class="about" id="about">
 			<h1 class="about-title">About</h1>
-			<div class="about-content">
-				<div>
-					<h2>Description</h2>
-					<p>
-						Maestro is a web and mobile experience to help you learn how to read sheet music in just four lessons.
-						Our unified lessons gradually build on and reinforce each other so that you leave each session with a renewed sense of possibilities.
-						We’ll take you through staff, rhythm, meter, and intervals.
-						Meet your Maestro.
-					</p>
-				</div>
-				<div>
-					<h2>How</h2>
-					<p>
-						We use world class technologies to bring Maestro to you.
-					</p>
-					<span class="tech-buttons">
-						<ul class="inline">
-							<li>
-								<a href="https://www.docker.com"><img src="assets/img/docker_vertical_large.png" class="tech-button" width="180"></a>
-							</li>
-							<li>
-								<a href="https://vuejs.org"><img src="assets/img/vue_logo.png" class="tech-button" width="180"></a>
-							</li>
-							<li>
-								<a href="https://parseplatform.org"><img src="assets/img/parse_logo.png" class="tech-button" width="180"></a>
-							</li>
-						</ul>
-					</span>
-				</div>
+			<p>
+				Maestro is a web and mobile experience to help you learn how to read sheet music in just four lessons.
+				Our unified lessons gradually build on and reinforce each other so that you leave each session with a renewed sense of possibilities.
+				We’ll take you through staff, rhythm, meter, and intervals.
+				Meet your Maestro.
+			</p>
+			<h2>How</h2>
+			<p>
+				We use these world class technologies to bring Maestro to you. Our frontend is built using the Vue JavaScript framework.
+				The backend is composed of a Parse server running on a MongoDB database. Our entire experience is run in Docker for hassle free development and deployment.
+			</p>
+			<div class="tech-buttons">
+				<a href="https://www.docker.com" class="tech-button"><img src="assets/img/docker_vertical_large.png" width="150"></a>
+				<a href="https://vuejs.org" class="tech-button"><img src="assets/img/vue_logo.png" width="150"></a>
+				<a href="https://parseplatform.org" class="tech-button"><img src="assets/img/parse_logo.png" width="150"></a>
 			</div>
 		</div> <!-- about -->
 		<div class="team" id="team">
 			<h1 class="team-title">Team</h1>
 			<div class="profiles">
-				<div class="profile-row">
-					<img class="profile" src="assets/img/profiles/andre-gras.jpg">
-					<img class="profile" src="assets/img/profiles/andrew-ksendzoff.jpg">
-					<img class="profile" src="assets/img/profiles/bob-brennan-pickens.jpg">
-					<img class="profile" src="assets/img/profiles/dan-mattka.jpg">
-					<img class="profile" src="assets/img/profiles/jacquie-elias.jpg">
-					<img class="profile" src="assets/img/profiles/jake-carlson.jpg">
+				<div class="profile">
+					<img class="profile-image" src="assets/img/profiles/andre-gras.jpg">
+					<div class="profile-text">Andre Gras</div>
 				</div>
-				<div class="profile-row">
-					<img class="profile" src="assets/img/profiles/jenn-le.jpg">
-					<img class="profile" src="assets/img/profiles/kena-du.jpg">
-					<img class="profile" src="assets/img/profiles/max-brito.jpg">
-					<img class="profile" src="assets/img/profiles/meg-lindsay.jpg">
-					<img class="profile" src="assets/img/profiles/paul-herz.jpg">
-					<img class="profile" src="assets/img/profiles/sean-burrows.jpg">
+				<div class="profile">
+					<img class="profile-image" src="assets/img/profiles/andrew-ksendzoff.jpg">
+					<div class="profile-text">Andrew Ksendzoff</div>
+				</div>
+				<div class="profile">
+					<img class="profile-image" src="assets/img/profiles/bob-brennan-pickens.jpg">
+					<div class="profile-text">Bob Brennan Pickens</div>
+				</div>
+				<div class="profile">
+					<img class="profile-image" src="assets/img/profiles/dan-mattka.jpg">
+					<div class="profile-text">Dan Mattka</div>
+				</div>
+				<div class="profile">
+					<img class="profile-image" src="assets/img/profiles/jacquie-elias.jpg">
+					<div class="profile-text">Jacquie Eilas</div>
+				</div>
+				<div class="profile">
+					<img class="profile-image" src="assets/img/profiles/jake-carlson.jpg">
+					<div class="profile-text">Jake Carlson</div>
+				</div>
+				<div class="profile">
+					<img class="profile-image" src="assets/img/profiles/jenn-le.jpg">
+					<div class="profile-text">Jenn Le</div>
+				</div>
+				<div class="profile">
+					<img class="profile-image" src="assets/img/profiles/kena-du.jpg">
+					<div class="profile-text">Kena Du</div>
+				</div>
+				<div class="profile">
+					<img class="profile-image" src="assets/img/profiles/max-brito.jpg">
+					<div class="profile-text">Max Brito</div>
+				</div>
+				<div class="profile">
+					<img class="profile-image" src="assets/img/profiles/meg-lindsay.jpg">
+					<div class="profile-text">Meg Lindsay</div>
+				</div>
+				<div class="profile">
+					<img class="profile-image" src="assets/img/profiles/paul-herz.jpg">
+					<div class="profile-text">Paul Herz</div>
+				</div>
+				<div class="profile">
+					<img class="profile-image" src="assets/img/profiles/sean-burrows.jpg">
+					<div class="profile-text">Sean Burrows</div>
 				</div>
 			</div><!-- .profiles -->
+			<footer>©2017 Maestro</footer>
 		</div> <!-- team -->
 	</body>
 </html>
