Corp landing opens app

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -23,7 +23,7 @@
 					<h2 class="homepage-hero-text-secondary">Your music teacher, anywhere</h2>
 				</div>
 				<div class="homepage-hero-bottom">
-					<a href="app" class="button default-button block-button big-button">Learn Now</a>
+					<a href="app/#/" class="button default-button block-button big-button">Learn Now</a>
 				</div>
 			</section>
 		</div><!-- .abovefold -->
