--- a/src/public/index.html
+++ b/src/public/index.html
@@ -67,7 +67,7 @@
 				</div>
 				<div class="profile">
 					<img class="profile-image" src="assets/img/profiles/jacquie-elias.jpg">
-					<div class="profile-text">Jacquie Eilas</div>
+					<div class="profile-text">Jacquie Elias</div>
 				</div>
 				<div class="profile">
 					<img class="profile-image" src="assets/img/profiles/jake-carlson.jpg">
